--- a/report/papers/paper-severe-gamm.Rmd
+++ b/report/papers/paper-severe-gamm.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "基于泊松和Logistic可加模型空气严重污染影响因素研究"
-author: '金林&nbsp; 王红红&nbsp; 李研'
-date: '（中南财经政法大学&nbsp; 统计与数学学院，湖北&nbsp; 武汉 430073）'
+# author: '金林&nbsp; 王红红&nbsp; 李研'
+# date: '（中南财经政法大学&nbsp; 统计与数学学院，湖北&nbsp; 武汉 430073）'
 output:
   bookdown::pdf_document2:
     keep_tex: yes
@@ -51,12 +51,18 @@ graphics.off()
 Sys.setlocale("LC_ALL", "Chinese")
 ```
 
-**TODO**
-- [ ] 1. 第2段每个参考文献尽量写开
-- [ ] 2. 增加年度模型的模型解释，主要是对系数进行定量化解释
-- [ ] 3. 月度模型模型解释部分对系数进行定量化解释
-- [ ] 4. 表4中是否临海，是否供暖不显著，去掉
+<!-- **TODO** -->
 
+<!-- - [ ] 1. 第2段每个参考文献尽量写开 -->
+<!-- - [ ] 2. 增加年度模型的模型解释，主要是对系数进行定量化解释 -->
+<!-- - [ ] 3. 月度模型模型解释部分对系数进行定量化解释 -->
+<!-- - [ ] 4. 表4中是否临海，是否供暖不显著，去掉 -->
+
+
+
+&nbsp;
+
+&nbsp;
 
 **摘要：**本文以2014-2017年中国重点监测的35个城市的年度空气质量严重污染天数和月
 度空气质量严重污染天数为研究对象，分别构建泊松和Logistic可加模型对城市空气质量的
