--- a/report/papers/paper-excel-gamm.Rmd
+++ b/report/papers/paper-excel-gamm.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "基于广义可加混合模型空气质量为优天数影响因素研究"
-author: '金林&nbsp; 李研&nbsp; 王红红'
-date: '（中南财经政法大学&nbsp; 统计与数学学院，湖北&nbsp; 武汉 430073）'
+# author: '金林&nbsp; 李研&nbsp; 王红红'
+# date: '（中南财经政法大学&nbsp; 统计与数学学院，湖北&nbsp; 武汉 430073）'
 output:
   bookdown::pdf_document2:
     keep_tex: true
@@ -50,8 +50,16 @@ graphics.off()
 Sys.setlocale("LC_ALL", "Chinese")
 ```
 
-**TODO**
-- [ ] 1. 第2段每个参考文献尽量写开
+<!-- **TODO** -->
+
+<!-- - [ ] 1. 第2段每个参考文献尽量写开 -->
+
+
+&nbsp;
+
+&nbsp;
+
+
 
 **摘要：**本文以2014-2017年中国重点监测的35个城市的年度空气质量为优天数和月度空气
 质量为优天数为研究对象，利用广义可加混合模型对城市空气质量的影响因素进行研究。结
